2005-06-13  Joel Brobecker  <brobecker@adacore.com>

	* hppa-tdep.c (hppa_pc_requires_run_before_use): Really test all
	bits of top byte in address.

2005-06-13  Wu Zhou  <woodzltc@cn.ibm.com>

	* eval.c (evaluate_subexp_standard): Add code to check the target
	type of a TYPE_CODE_PTR value when we encounter a f77 undetermined
	arglist.  If it is array, string or function, work on the target
	value instead.

2005-06-12  Daniel Jacobowitz  <dan@codesourcery.com>
	    Nick Roberts  <nickrob@snap.net.nz>

	* mi/mi-main.c (register_changed_p, get_register): Use
	get_selected_frame.
	(mi_execute_command): Call mi_out_rewind after an error.

2005-06-12  Mark Kettenis  <kettenis@gnu.org>

	* hppa-tdep.c (hppa_frame_prev_register)
	(hppa_fallback_frame_prev_register)
	(hppa_stub_frame_prev_register): Change type of last argument to
	`gdb_byte *'.
	(hppa_fetch_pointer_argument): Tweak comment.  Use
	get_frame_register_unsigned instead of get_frame_register.
	(hppa32_return_value, hppa64_return_value): Change type of readbuf
	and writebuf arguments to `gdb_byte *'.  Remove unecessary casts
	and local variables.
	(hppa_pseudo_register_read): Change type of last argument to
	`gdb_byte *'.

	* m68k-tdep.c (m68k_frame_prev_register): Change type of last
	argument to `gdb_byte *'.

	* arm-tdep.c (set_disassembly_style, _initialize_arm_tdep):
	Consitify regnames.

	* alpha-tdep.c (alpha_sigtramp_frame_prev_register)
	(alpha_heuristic_frame_prev_register): Change type of last
	argument to `gdb_byte *'.
	(alpha_register_to_value, alpha_value_to_register) 
	(alpha_extract_return_value, alpha_store_return_value): Likewise.
	* alpha-mdebug-tdep.c (alpha_mdebug_frame_prev_register): Likewise.

	* arm-tdep.c (arm_prologue_prev_register)
	(arm_sigtramp_prev_register): Change type of last argument to
	`gdb_byte *'.

	* m88k-tdep.c (m88k_frame_prev_register): Change type of last
	argument to `gdb_byte *'.

	* vax-tdep.c (vax_frame_prev_register): Change type of last