@@ -1,3 +1,10 @@
+2005-06-13  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* gdb.base/relocate.c: Add a copyright notice.
+	(dummy): Remove.
+	* gdb.base/relocate.exp: Test printing the values of variables
+	from a relocatable file.
+
 2005-06-12  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* gdb.mi/mi-syn-frame.exp, gdb.mi/mi2-syn-frame.exp: Don't expect
